put the reading schedule on the last page by default

--- a/A_Syllabus_Template/syllabus_template.tex
+++ b/A_Syllabus_Template/syllabus_template.tex
@@ -249,7 +249,7 @@ the right to adjust it to suit the needs of the class.
 \newcommand\ivy{\addfontfeatures{RawFeature=+ornm}•}
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
-\begin{table}[htbp]
+\begin{table}[phtb]
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}
     \toprule
