--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -1,46 +1,75 @@
+\ProvidesFile{preamble.tex}[2013/09/06 v1.0 -- Syllabus preamble]
+
+% basic typography
 \usepackage{fontspec}
-\setmainfont[Ligatures=TeX]{Arno Pro}
+\setmainfont[Ligatures=TeX,
+             Numbers=OldStyle]{Arno Pro}
 \setsansfont[Ligatures=TeX,
              Scale=MatchLowercase]{Seria Sans Pro}
 \setmonofont[Scale=MatchLowercase]{Source Code Pro}
-\newfontfamily\balt[Ligatures=TeX]{EspinosaNova-RotundaBoldAlt}
 \usepackage{sectsty}
 \allsectionsfont{\sffamily}
 \frenchspacing
-\setlength{\emergencystretch}{2em}  % prevent overfull lines
+\setlength{\emergencystretch}{3em} % prevent overfull lines
 
-\usepackage[scale={0.6,0.8}]{geometry}
+% layout packages: page, logo, tables
+\usepackage[scale={0.6,0.8},
+            xetex]{geometry}
 \usepackage{graphicx}
-
-\usepackage{array}
-\usepackage{booktabs}
+\usepackage{array}     % allow insertions of column styling with >{}
+\usepackage{booktabs}  % elegant horizontal rules in tables
 \usepackage{marginfix} % protect positioning of margin table in policy/grades
 
-\newcounter{session} % macros for the schedule of readings
+% custom macros for a session count in the schedule of readings
+\newcounter{session}
 \newcounter{columns}
 \newcounter{courseunit}
-\newcommand\setcolumncount[2][0]{% optionally set sessioncount to other than 0,
-  \setcounter{session}{#1}       % e.g. to -1, or to resume a standing count
+\newcommand\setcolumncount[2][0]{ % optionally set count to other than 0,
+  \setcounter{session}{#1}        % e.g. to -1, or to a standing count
   \setcounter{columns}{#2}}
 \newcommand\sessioncount{\stepcounter{session}\arabic{session}}
 \newcommand\sessionskip[1]{\multicolumn{1}{@{}r@{ }}{#1}}
 \newcommand\unit[1]{\multicolumn{\thecolumns}{c}{%
-    \scshape\stepcounter{courseunit}\roman{courseunit}. \MakeLowercase{#1}}}
+  \scshape\stepcounter{courseunit}\roman{courseunit}. \MakeLowercase{#1}}}
 \newcommand\noclass[1]{\multicolumn{1}{@{}l}{\itshape No Class: #1}}
 
-\usepackage[setpagesize=false, % page size defined by xetex
-unicode=false, % unicode breaks when used with xetex
-xetex]{hyperref}
-\hypersetup{breaklinks=true,
-  bookmarks=true,
-  pdfauthor={Daniel R. Driver, PhD},
-  pdftitle={BSTH XXXX: Syllabus Template},
-  colorlinks=true,
-  urlcolor=blue,
-  linkcolor=magenta,
-  pdfborder={0 0 0}}
-\urlstyle{same}  % don't use monospace font for urls
+% color to match Tyndale's branding
+\usepackage[usenames]{xcolor}
+% predefined: black, white, red, green, blue, cyan, magenta, yellow
+\definecolor{TyndaleURLs}{HTML}{0062A0} % links on tyndale.ca
+\definecolor{TyndaleBlue}{cmyk}{1,1,0,.32}
+\definecolor{TyndaleGold}{cmyk}{0,.27,1,0}
+\definecolor{TyndaleRed}{cmyk}{0,1,.99,.04}
+\definecolor{TyndaleBlack}{cmyk}{0,0,0,1}
+\definecolor{TyndaleGreen}{cmyk}{.45,0,1,.24}
+\definecolor{TyndaleOrange}{cmyk}{0,.79,1,0}
+\definecolor{TyndaleAqua}{cmyk}{.47,0,.24,0}
+\definecolor{TyndaleYellow}{cmyk}{.03,.03,.35,0}
 
+% metadata (assumes a host of definitions are made in the main file)
+\usepackage[setpagesize=false,       % leave this task to geometry
+            xetex]{hyperref}
+\hypersetup{breaklinks=true,         % allow link text to break across lines
+            colorlinks=true,         % colorlinks resets pdfborder to 0 0 0
+              urlcolor=TyndaleURLs,  % for external links
+              linkcolor=TyndaleRed,  % for normal internal links
+              citecolor=TyndaleAqua, % for bibliographical citations in text
+            hyperfootnotes=false,    % fragile and distracting
+            pdfauthor={\professor},
+            pdftitle={\coursecode: \coursetitle},
+            pdfsubject={Tyndale UC, \semester},
+            pdfcreator={github.com/danieldriver/syllabus}}
+\urlstyle{same}                      % don't use monospace font for urls
+
+% custom footlines
+\usepackage{fancyhdr}
+\pagestyle{fancy} % turn it on
+\fancyhf{}        % reset everything
+\renewcommand{\headrulewidth}{0pt} % remove header line as well
+\lfoot{\sffamily\scshape\MakeLowercase{\coursetitle}}
+\rfoot{\sffamily\scshape\MakeLowercase{\semester~Syllabus | \thepage}}
+
+% gratuitous with custom title page, but useful as a fallback
 \title{\coursecode: \corusetitle}
 \author{\professor}
 \date{\semester}
