--- a/grades.tex
+++ b/grades.tex
@@ -9,22 +9,21 @@ I may furnish more detailed rubrics for particular assignments.
 \mparshift{0.5\baselineskip}
 \marginpar{
 \footnotesize\addfontfeatures{Numbers=Monospaced}
-\begin{tabular}[t]{@{}>{\scshape}ccc@{}}
+\begin{tabular}[t]{@{}>{\scshape}c@{\hspace{1em}}c@{\hspace{1em}}c@{}}
   \toprule
-             & \emph{percent} & \emph{points} \\ \cmidrule(l){2-3}
-  +          & 90--100        & 4.00          \\
-  a          & 85--89         & 4.00          \\
-  \char"2212 & 80--84         & 3.70          \\ [1ex]
-  +          & 77--79         & 3.30          \\
-  b          & 73--76         & 3.00          \\
-  \char"2212 & 70--72         & 2.70          \\ [1ex]
-  +          & 67--69         & 2.30          \\
-  c          & 63--66         & 2.00          \\
-  \char"2212 & 60--62         & 1.70          \\ [1ex]
-  +          & 57--59         & 1.30          \\
-  d          & 53--56         & 1.00          \\
-  \char"2212 & 50--52         & 0.70          \\ [1ex]
-  f          & 0--49          & 0.00          \\
+  +           & 90--100 & 4.00 \\
+  a           & 85--89  & 4.00 \\
+  \char"2212  & 80--84  & 3.70 \\ [1ex]
+  +           & 77--79  & 3.30 \\
+  b           & 73--76  & 3.00 \\
+  \char"2212  & 70--72  & 2.70 \\ [1ex]
+  +           & 67--69  & 2.30 \\
+  c           & 63--66  & 2.00 \\
+  \char"2212  & 60--62  & 1.70 \\ [1ex]
+  +           & 57--59  & 1.30 \\
+  d           & 53--56  & 1.00 \\
+  \char"2212  & 50--52  & 0.70 \\ [1ex]
+  f           & 0--49   & 0.00 \\
   \bottomrule
 \end{tabular}}
 
