let's do it in Meta / Meta Serif

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -3,10 +3,9 @@
 % basic typography
 \usepackage{fontspec}
 \setmainfont[Ligatures=TeX,
-             Numbers=OldStyle]{Arno Pro}
-\setsansfont[Ligatures=TeX,
-             Scale=MatchLowercase]{Seria Sans Pro}
-\setmonofont[Scale=MatchLowercase]{Source Code Pro}
+             Numbers=OldStyle]{Meta Serif Pro}
+\setsansfont[Ligatures=TeX]{Meta Pro}
+\setmonofont[]{Nitti}
 \usepackage{sectsty}
 \allsectionsfont{\sffamily}
 \frenchspacing
