--- a/includes/title.tex
+++ b/includes/title.tex
@@ -16,7 +16,7 @@
     \vfill
 
     {\sffamily\textsc{\LARGE\MakeLowercase\ccode}\\[2ex]
-      \bfseries\itshape\Huge\ctitle}
+      \bfseries\Huge\ctitle}
 
     \vfill
 
