ivy only worked with Arno, sadly

--- a/A_Syllabus_Template/syllabus_template.tex
+++ b/A_Syllabus_Template/syllabus_template.tex
@@ -245,7 +245,6 @@ the right to adjust it to suit the needs of the class.
 \newcommand\threebyten{\addfontfeatures{Numbers=Lining}3\,{\char"00D7}\,10}
 \newcommand\Yhwh{\textsc{Yhwh}}
 \newcommand\yhwh{\textsc{yhwh}}
-\newcommand\ivy{\addfontfeatures{RawFeature=+ornm}•}
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
 \begin{table}[phtb]
@@ -267,7 +266,7 @@ the right to adjust it to suit the needs of the class.
           & Ten Commandments and a Goring Ox          & Exodus 19--23             &  7 Oct.  \\
           & I Delight in Your Instruction (Hear,      & Deuteronomy 1--11,        & 10 Oct.  \\
     \sessionskip{} & O Israel! Remember and Keep)     & \multicolumn{2}{l}{\emph{The Sabbath} \cite{heschel}} \\
-    \sessionskip{\ivy.}  & \noclass{Thanksgiving}     &  \emph{catch up}          & 14 Oct.  \\
+    \sessionskip{---.}  & \noclass{Thanksgiving}      &  \emph{catch up}          & 14 Oct.  \\
           & \emph{Deuteros Nomos}, a Second Law       & Deuteronomy 12--26        & 17 Oct.  \\
           & Moses a Prophet? The Law and the Prophets & Deuteronomy 27--34        & 21 Oct.  \\
           & \textbf{Midterm Exam}                     & \emph{review}             & 24 Oct.  \\ [1ex]
