make course series a variable, then tidy up

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -65,8 +65,8 @@
 \pagestyle{fancy} % turn it on
 \fancyhf{}        % reset everything
 \renewcommand{\headrulewidth}{0pt} % remove header line as well
-\lfoot{\sffamily\scshape\MakeLowercase{\ctitle, \cversion}}
-\rfoot{\sffamily\scshape\MakeLowercase{\csemester~Syllabus | \thepage}}
+\lfoot{\sffamily\scshape\small\MakeLowercase{\ctitle, v\cversion}}
+\rfoot{\sffamily\scshape\small\MakeLowercase{\prof\quad\thepage}}
 
 % gratuitous with custom title page, but useful as a fallback
 \title{\ccode: \ctitle}
