handle font size and leading manually

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -5,11 +5,23 @@
 \setmainfont[Ligatures=TeX,
              Numbers=OldStyle]{Meta Serif Pro}
 \setsansfont[Ligatures=TeX]{Meta Pro}
-\setmonofont[]{Nitti}
+\setmonofont[Scale=MatchLowercase]{Menlo}
 \usepackage{sectsty}
 \allsectionsfont{\sffamily}
 \frenchspacing
 \setlength{\emergencystretch}{3em} % prevent overfull lines
+
+% custom font size and leading
+\renewcommand\tiny{\fontsize{6}{9}\selectfont}
+\renewcommand\scriptsize{\fontsize{7}{10}\selectfont}
+\renewcommand\footnotesize{\fontsize{8}{11}\selectfont}
+\renewcommand\small{\fontsize{9}{12}\selectfont}
+\renewcommand\normalsize{\fontsize{9.5}{12}\selectfont}% base size
+\renewcommand\large{\fontsize{11}{13}\selectfont}
+\renewcommand\Large{\fontsize{13}{15}\selectfont}
+\renewcommand\LARGE{\fontsize{16}{18}\selectfont}
+\renewcommand\huge{\fontsize{19}{21}\selectfont}
+\renewcommand\Huge{\fontsize{24}{26}\selectfont}
 
 % layout packages: page, logo, tables
 \usepackage[scale={0.6,0.8},
