--- a/includes/title.tex
+++ b/includes/title.tex
@@ -7,11 +7,11 @@
 
     \begin{minipage}{\textwidth}
       \parbox[t]{0.5\textwidth}{
-        \mbox{}\\[-\baselineskip] % dummy line to align parboxes
+        \mbox{}\\[-13pt] % dummy line to align parboxes
         \includegraphics[width=0.5\textwidth]{.syllabus/includes/TyndaleUC}}
       \hfill
       \parbox[t]{0.4\textwidth}{
-        \raggedleft\sffamily Course Syllabus\\
+        \raggedleft Course Syllabus\\
         \csemester}
     \end{minipage}
 
