provide Meta Hebrew for Hebrew text

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -5,6 +5,7 @@
 \setmainfont[Ligatures=TeX,
              Numbers=OldStyle]{Meta Serif Pro}
 \setsansfont[Ligatures=TeX]{Meta Pro}
+\newfontfamily{\H}{Meta Hebrew}
 \setmonofont[Scale=MatchLowercase]{Menlo}
 \usepackage{sectsty}
 \allsectionsfont{\sffamily}
