let the small print be footnote size

--- a/includes/title.tex
+++ b/includes/title.tex
@@ -40,7 +40,7 @@
 
     \vfill
 
-    \begin{description}\small
+    \begin{description}\footnotesize
       \item[Commuter Hotline]
         Class cancellations due to inclement weather or illness will
         be announced on the commuter hotline at \texttt{416.226.6620
