--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -78,8 +78,8 @@
 \pagestyle{fancy} % turn it on
 \fancyhf{}        % reset everything
 \renewcommand{\headrulewidth}{0pt} % remove header line as well
-\lfoot{\sffamily\scshape\small\MakeLowercase{\ctitle, v\cversion}}
-\rfoot{\sffamily\scshape\small\MakeLowercase{\prof\quad\thepage}}
+\lfoot{\sffamily\scshape\footnotesize\MakeLowercase{\ctitle, v\cversion}}
+\rfoot{\sffamily\scshape\footnotesize\MakeLowercase{\prof\quad\thepage}}
 
 % gratuitous with custom title page, but useful as a fallback
 \title{\ccode: \ctitle}
