--- a/grades.tex
+++ b/grades.tex
@@ -8,7 +8,7 @@ I may furnish more detailed rubrics for particular assignments.
 
 \mparshift{0.5\baselineskip}
 \marginpar{
-\footnotesize\addfontfeatures{Numbers=Monospaced}
+\footnotesize
 \begin{tabular}[t]{@{}>{\scshape}c@{\hspace{1em}}c@{\hspace{1em}}c@{}}
   \toprule
   +           & 90--100 & 4.00 \\
