adjust leading on title page

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -15,12 +15,12 @@
 % custom font size and leading
 \renewcommand\tiny{\fontsize{6}{9}\selectfont}
 \renewcommand\scriptsize{\fontsize{7}{10}\selectfont}
-\renewcommand\footnotesize{\fontsize{8}{11}\selectfont}
-\renewcommand\small{\fontsize{9}{12}\selectfont}
+\renewcommand\footnotesize{\fontsize{8}{10.5}\selectfont}
+\renewcommand\small{\fontsize{9}{11.5}\selectfont}
 \renewcommand\normalsize{\fontsize{9.5}{12}\selectfont}% base size
 \renewcommand\large{\fontsize{11}{13}\selectfont}
 \renewcommand\Large{\fontsize{13}{15}\selectfont}
-\renewcommand\LARGE{\fontsize{16}{18}\selectfont}
+\renewcommand\LARGE{\fontsize{16}{19}\selectfont}% "course syllabus \\ semester" benefits from more lead
 \renewcommand\huge{\fontsize{19}{21}\selectfont}
 \renewcommand\Huge{\fontsize{24}{26}\selectfont}
 
