do the proportions by feel rather than math

--- a/includes/title.tex
+++ b/includes/title.tex
@@ -9,10 +9,10 @@
     \newlength\topwd
     \settowidth\topwd\toptxt
     \begin{minipage}{\textwidth}
-      \color{TyndaleBlue}
-      \parbox[t]{\the\topwd}{
+      \color{TyndaleRed}
+      \parbox[t]{140pt}{
         \mbox{}\\[-13pt] % dummy line to align parboxes
-        \includegraphics[width=\the\topwd]{.syllabus/includes/TyndaleUC}}
+        \includegraphics[width=140pt]{.syllabus/includes/TyndaleUC}}
       \hfill
       \parbox[t]{\the\topwd}{
         \raggedleft\toptxt \\ \csemester}
