stick with primary brand colours

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -65,7 +65,7 @@
             colorlinks=true,       % colorlinks resets pdfborder to 0 0 0
             urlcolor=TyndaleURLs,  % for external links
             linkcolor=TyndaleRed,  % for normal internal links
-            citecolor=TyndaleAqua, % for bibliographical citations in text
+            citecolor=TyndaleGold, % for bibliographical citations in text
             hyperfootnotes=false,  % fragile and distracting
             pdfauthor={\prof},
             pdftitle={\ccode: \ctitle},
