eliminate error: 'Numbers=OldStyle' (+onum) not available

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -2,8 +2,7 @@
 
 % basic typography
 \usepackage{fontspec}
-\setmainfont[Ligatures=TeX,
-             Numbers=OldStyle]{Meta Serif Pro}
+\setmainfont[Ligatures=TeX]{Meta Serif Pro}
 \setsansfont[Ligatures=TeX]{Meta Pro}
 \newfontfamily{\H}{Meta Hebrew}
 \setmonofont[Scale=MatchLowercase]{Menlo}
