final version of template before Fall 2013 semester

--- a/A_Syllabus_Template/syllabus_template.tex
+++ b/A_Syllabus_Template/syllabus_template.tex
@@ -23,6 +23,10 @@
   an orientation to the historical backgrounds, religious context,
   literary forms, apocryphal dimensions, prophetic elements, matters of
   canon, text, interpretation, and critical issues.
+
+  {\itshape Note that this class is both a general studies requirement
+  and a prerequisite for advanced courses in Biblical Studies \&
+  Theology.}
 }
 
 \input{.syllabus/includes/preamble}
@@ -151,9 +155,9 @@ expect to get an A for the course.
 Note that the required readings for this survey emphasize a selection
 of primary texts from the Old Testament. Reading in the vast body of
 secondary literature on the Bible is largely left for upper-division
-courses. Diligent students in \ccode, however---and all prospective
-majors---will make a special of reviewing the supplementary material
-carefully, since they aim for maximum understanding.
+courses. Diligent students, however---and all prospective majors---will
+make a special point of reviewing the supplementary material carefully,
+since they aim at maximum understanding.
 
 \section{Evaluation}
 \label{evaluation}
@@ -182,7 +186,7 @@ carefully, since they aim for maximum understanding.
    and only a single attempt is allowed.
  \item Students are to \textbf{memorize Psalm 8} in the KJV and recite
    it to me privately, in my office, in the fourth or fifth week of
-   class (a sign-up sheet will be circulated).
+   class. A sign-up sheet will be circulated in week three.
  \item A \textbf{midterm exam} will be given in class as scheduled in
    the course outline (Section~\ref{outline}). It may also involve a
    take-home writing component.
@@ -190,7 +194,8 @@ carefully, since they aim for maximum understanding.
    period as schedule by the Registrar (see Section~\ref{exams}). It is
    designed to assess learning outcomes---how well you have obtained the
    objectives outlined in Section~\ref{outcomes}. Test your readiness
-   for the final by reviewing those paragraphs.
+   for the final by asking yourself how well you can perform the tasks
+   outlined in those paragraphs.
 \end{enumerate}
 
 The breakdown for the semester's total work is as follows:
@@ -234,7 +239,7 @@ The breakdown for the semester's total work is as follows:
 \section{Course Outline}
 \label{outline}
 
-Readings of a given day are to be completed before the start of class
+Readings of a given day should be completed before the start of class
 on the same date. Primary readings are compulsory. Any supplementary
 readings that I circulate (see Section~\ref{supplementary}) will
 be keyed to the session number (listed under \textbf{\S} in
@@ -242,9 +247,7 @@ Table~\ref{schedule}), and should ideally be read before class as well.
 We will adhere to the schedule as closely as possible, though I reserve
 the right to adjust it to suit the needs of the class.
 
-\newcommand\threebyten{\addfontfeatures{Numbers=Lining}3\,{\char"00D7}\,10}
 \newcommand\Yhwh{\textsc{Yhwh}}
-\newcommand\yhwh{\textsc{yhwh}}
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
 \begin{table}[phtb]
@@ -256,17 +259,17 @@ the right to adjust it to suit the needs of the class.
     \unit{Beginnings}        \\
           & When God Created                          & Psalms 8, 74, 104         &  9 Sept. \\
           & Eden, a Garden in the East                & Genesis 1--3              & 12 Sept. \\
-          & \threebyten\ Generations                  & Genesis 4--11             & 16 Sept. \\
+          & \liningnums{3\,×\,10} Generations         & Genesis 4--11             & 16 Sept. \\
           & Father Abraham and King Abimelech         & Genesis 12--36            & 19 Sept. \\
           & Joseph and His Brothers                   & Genesis 37--50            & 23 Sept. \\
           & A Wise Son; Dame Wisdom                   & Proverbs 1--9             & 26 Sept. \\ [1ex]
     \unit{Egypt \& Sinai}                                                                    \\
           & The Call of Moses and the Divine Name     & Exodus 1--6               & 30 Sept. \\
           & Who is \Yhwh? I Do Not Know \Yhwh         & Exodus 7--15, 34--36      &  3 Oct.  \\
-          & Ten Commandments and a Goring Ox          & Exodus 19--23             &  7 Oct.  \\
+          & Ten Cuuommandments and a Goring Ox          & Exodus 19--23             &  7 Oct.  \\
           & I Delight in Your Instruction (Hear,      & Deuteronomy 1--11,        & 10 Oct.  \\
     \sessionskip{} & O Israel! Remember and Keep)     & \multicolumn{2}{l}{\emph{The Sabbath} \cite{heschel}} \\
-    \sessionskip{---.}  & \noclass{Thanksgiving}      &  \emph{catch up}          & 14 Oct.  \\
+    \sessionskip{---.}  & \noclass{Thanksgiving}      & \emph{catch up}           & 14 Oct.  \\
           & \emph{Deuteros Nomos}, a Second Law       & Deuteronomy 12--26        & 17 Oct.  \\
           & Moses a Prophet? The Law and the Prophets & Deuteronomy 27--34        & 21 Oct.  \\
           & \textbf{Midterm Exam}                     & \emph{review}             & 24 Oct.  \\ [1ex]
@@ -289,7 +292,7 @@ the right to adjust it to suit the needs of the class.
   \label{schedule}
 \end{table}
 
-See the \href{http://www.tyndale.ca/registrar/important-dates}{
+See the \href{http://www.tyndale.ca/registrar/important-dates}{%
 Registrar's website} for a list of other important dates. Generally, the
 last day to add or drop a class without penalty is the end of the second
 week of class.
