bake in the input path, kill the symlink

--- a/A_Syllabus_Template/syllabus_template.tex
+++ b/A_Syllabus_Template/syllabus_template.tex
@@ -1,8 +1,11 @@
 % !TEX program = xelatex
 % !TEX encoding = UTF-8 Unicode
+% Copyright (c) 2013 by Daniel R. Driver. All rights reserved.
 
 \documentclass[titlepage]{article}
-\input{.syllabus/includes/variables}
+% clone the necessary input files: git@github.com:danieldriver/syllabus.git
+\newcommand\path{../../syllabus}
+\input{\path/includes/variables}
 
 \coursecode[2.1]{BSTH 1013} % version is 1.0 unless \cmd[1.1]{}
 \coursetitle{Old Testament Scripture} % optional series: \cmd[series]{}
@@ -29,10 +32,10 @@
   Theology.}
 }
 
-\input{.syllabus/includes/preamble}
+\input{\path/includes/preamble}
 
 \begin{document}
-\input{.syllabus/includes/title}
+\input{\path/includes/title}
 
 \section{Learning Outcomes}
 \label{outcomes}
@@ -218,23 +221,23 @@ The breakdown for the semester's total work is as follows:
 \section{Policy on Assignments, Exams \& Grades}
 \label{policy}
 
-\input{.syllabus/academic_calendar}
-\input{.syllabus/assignments}
-\input{.syllabus/exams}
-\input{.syllabus/grades}
+\input{\path/academic_calendar}
+\input{\path/assignments}
+\input{\path/exams}
+\input{\path/grades}
 
 \section{Student Expectations \& Guidelines}
 \label{expectations}
 
-\input{.syllabus/academic_integrity}
-\input{.syllabus/attendance}
-\input{.syllabus/technology}
+\input{\path/academic_integrity}
+\input{\path/attendance}
+\input{\path/technology}
 
 \section{Student Support}
 \label{support}
 
-\input{.syllabus/writing_centre}
-\input{.syllabus/accommodation}
+\input{\path/writing_centre}
+\input{\path/accommodation}
 
 \section{Course Outline}
 \label{outline}
