use input path variable instead of symlink

--- a/includes/title.tex
+++ b/includes/title.tex
@@ -12,7 +12,7 @@
       \color{TyndaleRed}
       \parbox[t]{140pt}{
         \mbox{}\\[-13pt] % dummy line to align parboxes
-        \includegraphics[width=140pt]{.syllabus/includes/TyndaleUC}}
+        \includegraphics[width=140pt]{\path/includes/TyndaleUC}}
       \hfill
       \parbox[t]{\the\topwd}{
         \raggedleft\toptxt \\ \csemester}
