fix for namespace problem (if that's the issue)

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -4,7 +4,7 @@
 \usepackage{fontspec}
 \setmainfont[Ligatures=TeX]{Meta Serif Pro}
 \setsansfont[Ligatures=TeX]{Meta Pro}
-\newfontfamily{\H}{Meta Hebrew}
+\newfontfamily\Heb{Meta Hebrew}
 \setmonofont[Scale=MatchLowercase]{Menlo}
 \usepackage{sectsty}
 \allsectionsfont{\sffamily}
