place general grading info under Evaluation sec

--- a/A_Syllabus_Template/syllabus_template.tex
+++ b/A_Syllabus_Template/syllabus_template.tex
@@ -165,6 +165,9 @@ since they aim at maximum understanding.
 \section{Evaluation}
 \label{evaluation}
 
+\subsection{Grade Structure for \ccode}
+\label{structure}
+
 % Please consider the following structure in your course. Evaluation
 % should be clearly linked to Learning Outcomes.
 %   - Some form of meaningful evaluation should occur during the first 4
@@ -217,14 +220,14 @@ The breakdown for the semester's total work is as follows:
   \label{distribution}
 \end{table}
 
+\input{\path/grades}
 
-\section{Policy on Assignments, Exams \& Grades}
+\section{Policy on Assignments \& Exams}
 \label{policy}
 
 \input{\path/academic_calendar}
 \input{\path/assignments}
 \input{\path/exams}
-\input{\path/grades}
 
 \section{Student Expectations \& Guidelines}
 \label{expectations}
@@ -251,6 +254,7 @@ We will adhere to the schedule as closely as possible, though I reserve
 the right to adjust it to suit the needs of the class.
 
 \newcommand\Yhwh{\textsc{Yhwh}}
+\newcommand\rarr{\char"2192\hspace*{0.5pt}}
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
 \begin{table}[phtb]
@@ -275,7 +279,7 @@ the right to adjust it to suit the needs of the class.
     \sessionskip{---.}  & \noclass{Thanksgiving}      & \emph{catch up}           & 14 Oct.  \\
           & \emph{Deuteros Nomos}, a Second Law       & Deuteronomy 12--26        & 17 Oct.  \\
           & Moses a Prophet? The Law and the Prophets & Deuteronomy 27--34        & 21 Oct.  \\
-          & \textbf{Midterm Exam}                     & \emph{review}             & 24 Oct.  \\ [1ex]
+    \sessionskip{\rarr} & \textbf{Midterm Exam}       & \emph{review}             & 24 Oct.  \\ [1ex]
     \unit{Prophets \& Kings}                                                                 \\
           & Joshua: \emph{Veni, Vidi, Vici?}          & Joshua 1--13:7            & 28 Oct.  \\
           & Of Judges and Philistines                 & Judges 1--9, 13--21       & 31 Oct.  \\
