--- a/grades.tex
+++ b/grades.tex
@@ -1,6 +1,6 @@
 \ProvidesFile{grades.tex}[2013/08/19 v1.0 -- Course policy]
 
-\subsection{Grading System}
+\subsection{Grading System at Tyndale}
 \label{grades}
 
 Tyndale University College provides these benchmarks for summative assessment.
