update TUC logo to .eps for crisper rendering

--- a/includes/title.tex
+++ b/includes/title.tex
@@ -9,10 +9,10 @@
     \newlength\topwd
     \settowidth\topwd\toptxt
     \begin{minipage}{\textwidth}
-      \color{TyndaleRed}
+      \color{TyndaleBlue}
       \parbox[t]{140pt}{
         \mbox{}\\[-13pt] % dummy line to align parboxes
-        \includegraphics[width=140pt]{\path/includes/TyndaleUC}}
+        \includegraphics[width=140pt]{\path/includes/TyndaleUC_left}}
       \hfill
       \parbox[t]{\the\topwd}{
         \raggedleft\toptxt \\ \csemester}
