--- a/A_Syllabus_Template/syllabus_template.tex
+++ b/A_Syllabus_Template/syllabus_template.tex
@@ -1,25 +1,25 @@
 % !TEX program = xelatex
 % !TEX encoding = UTF-8 Unicode
-% Copyright (c) 2013 by Daniel R. Driver. All rights reserved.
+% Copyright (c) 2014 by Daniel R. Driver. All rights reserved.
 
 \documentclass[titlepage]{article}
 % clone the necessary input files: git@github.com:danieldriver/syllabus.git
 \newcommand\path{../../syllabus}
 \input{\path/includes/variables}
 
-\coursecode[2.1]{BSTH 1013} % version is 1.0 unless \cmd[1.1]{}
-\coursetitle{Old Testament Scripture} % optional series: \cmd[series]{}
+\coursecode[2.1]{BSTH tk} % version is 1.0 unless \cmd[1.1]{}
+\coursetitle{tk} % optional series: \cmd[series]{}
 
 \professor{Daniel R. Driver} % terminal degree is PhD unless \cmd[DPhil]{}
 \phone{416.226.6620 x2201}
 \email{ddriver@tyndale.ca}
-\officehours{By appointment only}% in Ballyconnor 1088 unless \cmd[moved]{}
+\officehours{Mon. \& Wed., 2:30--4:30 \PM}% in Ballyconnor 1088 unless \cmd[moved]{}
 
-\semester{Fall 2013}
-\meets{Mondays \& Thursdays} % \meets{on}{at}{in}
-      {11:30 \AM--12:50 \PM}
+\semester{Winter 2014}
+\meets{Mondays \& Wednesdays} % \meets{on}{at}{in}
+      {8:30 \AM--9:50 \AM}
       {Ballyconnor 2087}
-\website{class.tyndale.ca} % omit http://
+\website{danieldriver.com} % omit http://
 \cdescription{% copy from tyndale.ca/registrar/calendar
   Survey of the redemptive story in the three major divisions of the Old
   Testament (the Law/Torah, the Prophets, and the Writings), including
@@ -261,38 +261,36 @@ the right to adjust it to suit the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}
     \toprule
-    \sessionskip{\textbf{\S}.}&\textbf{Lecture Title}&\textbf{Primary Reading}&\textbf{Date} \\
+    \sessionskip{\textbf{\S}.}&\textbf{Lecture Title}&\textbf{Primary Reading}&\textbf{Date}    \\
     \midrule
-    \unit{Beginnings}        \\
-          & When God Created                          & Psalms 8, 74, 104         &  9 Sept. \\
-          & Eden, a Garden in the East                & Genesis 1--3              & 12 Sept. \\
-          & \liningnums{3\,×\,10} Generations         & Genesis 4--11             & 16 Sept. \\
-          & Father Abraham and King Abimelech         & Genesis 12--36            & 19 Sept. \\
-          & Joseph and His Brothers                   & Genesis 37--50            & 23 Sept. \\
-          & A Wise Son; Dame Wisdom                   & Proverbs 1--9             & 26 Sept. \\ [1ex]
-    \unit{Egypt \& Sinai}                                                                    \\
-          & The Call of Moses and the Divine Name     & Exodus 1--6               & 30 Sept. \\
-          & Who is \Yhwh? I Do Not Know \Yhwh         & Exodus 7--15, 34--36      &  3 Oct.  \\
-          & Ten Cuuommandments and a Goring Ox          & Exodus 19--23             &  7 Oct.  \\
-          & I Delight in Your Instruction (Hear,      & Deuteronomy 1--11,        & 10 Oct.  \\
-    \sessionskip{} & O Israel! Remember and Keep)     & \multicolumn{2}{l}{\emph{The Sabbath} \cite{heschel}} \\
-    \sessionskip{---.}  & \noclass{Thanksgiving}      & \emph{catch up}           & 14 Oct.  \\
-          & \emph{Deuteros Nomos}, a Second Law       & Deuteronomy 12--26        & 17 Oct.  \\
-          & Moses a Prophet? The Law and the Prophets & Deuteronomy 27--34        & 21 Oct.  \\
-    \sessionskip{\rarr} & \textbf{Midterm Exam}       & \emph{review}             & 24 Oct.  \\ [1ex]
-    \unit{Prophets \& Kings}                                                                 \\
-          & Joshua: \emph{Veni, Vidi, Vici?}          & Joshua 1--13:7            & 28 Oct.  \\
-          & Of Judges and Philistines                 & Judges 1--9, 13--21       & 31 Oct.  \\
-          & Judge, Priest, Prophet, Kingmaker         & 1 Samuel 1--31            &  4 Nov.  \\
-          & David's House in Weal and Woe             & 2 Samuel 1--24            &  7 Nov.  \\
-          & A Lofty House and a House Divided         & 1 Kings 1--14             & 11 Nov.  \\
-          & Assyrian Crisis and Exile to Babylon      & 2 Kings 1--8, 17--25      & 14 Nov.  \\
-          & Twelve Minor Prophets                     & Hosea 1--Amos 9           & 18 Nov.  \\
-          & Isaiah of Jerusalem                       & Isaiah 1--12, 36--39      & 21 Nov.  \\
-          & Zion's Final Destiny                      & Isaiah 56--66             & 25 Nov.  \\ [1ex]
-    \unit{Psalms}                                                                            \\
-          & The Shaping of the Psalter                & Psalms 1, 72, 89, 90, 145 & 28 Nov.  \\
-          & Sinai and Zion                            & Psalms 2, 15, 24, 84, 110 &  2 Dec.  \\
+    \unit{One} \\
+          &                                           &                           &  6 Jan.     \\
+          &                                           &                           &  8 Jan.     \\
+          &                                           &                           & 13 Jan.     \\
+          &                                           &                           & 15 Jan.     \\
+          &                                           &                           & 20 Jan.     \\
+          &                                           &                           & 22 Jan.     \\ [1ex]
+    \unit{Two} \\
+          &                                           &                           & 27 Jan.     \\
+          &                                           &                           & 29 Jan.     \\
+          &                                           &                           &  3 Feb.     \\
+          &                                           &                           &  5 Feb.     \\
+          &                                           &                           & 10 Feb.     \\
+          &                                           &                           & 12 Feb.     \\
+    \sessionskip{---.}  & \noclass{Reading Week}      & \emph{research, write}    & 17--21 Feb. \\
+          &                                           &                           & 24 Feb.     \\
+          &                                           &                           & 26 Feb.     \\
+          &                                           &                           &  3 Mar.     \\
+          &                                           &                           &  5 Mar.     \\
+          &                                           &                           & 10 Mar.     \\
+          &                                           &                           & 12 Mar.     \\
+          &                                           &                           & 17 Mar.     \\
+          &                                           &                           & 19 Mar.     \\
+          &                                           &                           & 24 Mar.     \\
+          &                                           &                           & 26 Mar.     \\
+          &                                           &                           & 31 Mar.     \\
+          &                                           &                           &  2 Apr.     \\
+    \sessionskip{---.}  & \noclass{Reading Days}      & \emph{research, write}    & 7--8 Apr.   \\
     \bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
