add \noclassmulti command

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -42,6 +42,7 @@
 \newcommand\unit[1]{\multicolumn{\thecolumns}{c}{%
   \scshape\stepcounter{courseunit}\roman{courseunit}. \MakeLowercase{#1}}}
 \newcommand\noclass[1]{\multicolumn{1}{@{}l}{\itshape No Class: #1}}
+\newcommand\noclassmulti[2]{\multicolumn{#1}{@{}l}{\itshape No Class: #2}}
 
 % color to match Tyndale's branding
 \usepackage[usenames]{xcolor}
