SBL BibLit handles nikkud better than Meta Hebrew

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -84,7 +84,7 @@
 \usepackage{polyglossia}
 \setdefaultlanguage{english}
 \setotherlanguage{hebrew}
-\newfontfamily\hebrewfont[Script=Hebrew]{Meta Hebrew}
+\newfontfamily\hebrewfont[Script=Hebrew]{SBL BibLit}
 
 % protect positioning of margin table in policy/grades -- needs to come after polyglossia
 \usepackage{marginfix}
