remove \path variable from template

--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -4,9 +4,8 @@
 
 \documentclass[titlepage]{article}
 % clone the necessary input files: git@github.com:danieldriver/syllabus.git
-\newcommand\path{../}
-\newcommand\policy{\path/policy}
-\newcommand\incl{\path/includes}
+\newcommand\policy{../policy}
+\newcommand\incl{../includes}
 \input{\incl/variables}
 
 \coursecode[2.1]{BSTH tk} % version is 1.0 unless \cmd[1.1]{}
