remove some more \path variable

--- a/includes/title.tex
+++ b/includes/title.tex
@@ -12,7 +12,7 @@
       \color{TyndaleBlue}
       \parbox[t]{140pt}{
         \mbox{}\\[-13pt] % dummy line to align parboxes
-        \includegraphics[width=140pt]{\path/includes/TyndaleUC_left}}
+        \includegraphics[width=140pt]{\incl/TyndaleUC_left}}
       \hfill
       \parbox[t]{\the\topwd}{
         \raggedleft\toptxt \\ \csemester}
